updated share resource page to handle no ogImage situation. fixed change password

--- a/src/app/pages/profile/change-password/change-password.component.html
+++ b/src/app/pages/profile/change-password/change-password.component.html
@@ -55,7 +55,7 @@
         </div>
 
         <div class="form-button-container">
-          <app-custom-button buttonLabel="Save" size="small" [isDisabled]="passwordForm.invalid"></app-custom-button>
+          <app-custom-button buttonLabel="Save" size="small"></app-custom-button>
         </div>
       </form>
     </div>
