--- a/src/app/components/resource/resource.component.scss
+++ b/src/app/components/resource/resource.component.scss
@@ -70,6 +70,9 @@
   }
 
   .stats {
+    display: inline-grid;
+    grid-template-columns: 50px 50px;
+    grid-gap: 15px;
     padding: 0 15px 15px 15px;
 
     .like {
