added og data and other build optimizations

--- a/src/app/components/post/comment/comment.component.html
+++ b/src/app/components/post/comment/comment.component.html
@@ -25,7 +25,7 @@
 </div>
 
 <div
-  class="see-more"
+  class="see-more-comments"
   *ngIf="allComments.length < count && !isLoading"
   (click)="getMoreComments()"
   matRipple
