--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons|Bree+Serif|Hind:400,500,700|Montserrat:300,700|Raleway:400,900&display=swap");
 @import "~normalize.css/normalize.css";
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import "./assets/styles/material-overrides.scss";
