upgraded to angular 11

--- a/src/app/components/collection/collection-options/collection-options.component.html
+++ b/src/app/components/collection/collection-options/collection-options.component.html
@@ -2,7 +2,7 @@
   <span>Collection Options</span>
 </div>
 
-<div class="popover-item" matRipple>
+<div class="popover-item" matRipple (click)="goToShareResource()">
   <div class="top">
     <fa-icon [icon]="faPlusCircle"></fa-icon>
     <span>Add new post</span>
@@ -46,7 +46,7 @@
   </div>
 </div>
 
-<div class="popover-item" matRipple>
+<!-- <div class="popover-item" matRipple>
   <div class="top">
     <fa-icon [icon]="faShareAlt"></fa-icon>
     <span>Share</span>
@@ -55,4 +55,4 @@
   <div class="bottom">
     <small>Share collection on social media</small>
   </div>
-</div>
+</div> -->
