--- a/src/app/components/post/po/po.component.html
+++ b/src/app/components/post/po/po.component.html
@@ -2,7 +2,7 @@
   <span>Post Options</span>
 </div>
 
-<div class="popover-item" matRipple>
+<!-- <div class="popover-item" matRipple>
   <div class="top">
     <fa-icon [icon]="faShareAlt"></fa-icon>
     <span>Share</span>
@@ -11,7 +11,7 @@
   <div class="bottom">
     <small>Share post directly on social media</small>
   </div>
-</div>
+</div> -->
 
 <div class="popover-item" matRipple (click)="copyLink()">
   <div class="top">
@@ -51,7 +51,7 @@
   </div>
 </div>
 
-<div class="popover-item" matRipple>
+<!-- <div class="popover-item" matRipple>
   <div class="top">
     <fa-icon [icon]="faBackspace"></fa-icon>
     <span>Report</span>
@@ -60,4 +60,4 @@
   <div class="bottom">
     <small>Report if content is illegal or inappropriate</small>
   </div>
-</div>
+</div> -->
