--- a/src/app/layouts/no-auth/no-auth.component.html
+++ b/src/app/layouts/no-auth/no-auth.component.html
@@ -14,8 +14,7 @@
         </div>
 
         <h1>Everest</h1>
-        <p>Free academic resoures curated by the community
-            for the community
+        <p>A social network lite where you can share and collect stuff off the net
         </p>
 
         <router-outlet></router-outlet>
