--- a/src/app/components/empty-state/empty-state.component.scss
+++ b/src/app/components/empty-state/empty-state.component.scss
@@ -1,11 +1,12 @@
 .empty-state-container {
-    min-width: 300px;
+    min-width: 250px;
     padding: 15px;
     background-color: var(--empty-state-container-background);
     border-radius: 5px;
     min-height: 300px;
     display: grid;
     place-items: center;
+    margin-bottom: 25px;
 
     .content {
         .image {
