--- a/src/app/components/profile-summary/profile-summary.component.scss
+++ b/src/app/components/profile-summary/profile-summary.component.scss
@@ -111,6 +111,7 @@
       grid-gap: -15px;
 
       .remaining-followers {
+        cursor: pointer;
         width: 35px;
         height: 35px;
         display: grid;
