--- a/src/assets/styles/_colors.scss
+++ b/src/assets/styles/_colors.scss
@@ -153,7 +153,7 @@ $manage-header-control-input-color: inherit;
 $manage-header-control-input-color-dark: white;
 $manage-header-control-selected: #481a89;
 $manage-header-control-selected-dark:white;
-$manage-header-control-icon-color: #481a89;
+$manage-header-control-icon-color: #d7d7d7;
 $manage-header-control-icon-color-dark: #7a47ba;
 $see-more-background-color: white;
 $see-more-background-color-dark: #212121;
