--- a/src/app/components/dialogs/ff/ff.component.scss
+++ b/src/app/components/dialogs/ff/ff.component.scss
@@ -1,6 +1,7 @@
 .parent {
   height: 100%;
   overflow: hidden;
+
   .followers {
     height: 300px;
     max-height: 500px;
@@ -9,6 +10,7 @@
     &:hover {
       overflow-y: scroll;
     }
+
     .user {
       display: grid;
       grid-template-columns: 50px 1fr;
@@ -26,6 +28,7 @@
 
       .details {
         align-self: center;
+
         span {
           display: block;
 
@@ -49,41 +52,46 @@
     &:hover {
       overflow-y: scroll;
     }
+
     .user {
-      display: grid;
-      grid-template-columns: 50px 1fr 1fr;
-      grid-column-gap: 15px;
-      margin: 15px 0;
+      .user-row {
+        display: grid;
+        grid-template-columns: 50px 1fr 1fr;
+        grid-column-gap: 15px;
+        margin: 15px 0;
 
-      .image {
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
-        background-color: grey;
-        background-size: cover;
-        background-position: center center;
-      }
+        .image {
+          width: 50px;
+          height: 50px;
+          border-radius: 50%;
+          background-color: grey;
+          background-size: cover;
+          background-position: center center;
+        }
 
-      .details {
-        align-self: center;
-        span {
-          display: block;
-          &.name {
-            font-size: 14px;
-          }
+        .details {
+          align-self: center;
 
-          &.username {
-            font-size: 12px;
+          span {
+            display: block;
+
+            &.name {
+              font-size: 14px;
+            }
+
+            &.username {
+              font-size: 12px;
+            }
           }
         }
-      }
 
-      div:nth-of-type(3) {
-        align-self: center;
-        justify-self: end;
+        .button-container {
+          align-self: center;
+          justify-self: end;
 
-        button {
-          font-size: 12px;
+          button {
+            font-size: 12px;
+          }
         }
       }
     }
@@ -97,7 +105,7 @@
     text-align: center;
     text-transform: uppercase;
     font-size: 12px;
-  
+
     mat-progress-spinner {
       margin-left: auto;
       margin-right: auto;
