--- a/src/app/components/dialogs/atc/mini-collection/mini-collection.component.scss
+++ b/src/app/components/dialogs/atc/mini-collection/mini-collection.component.scss
@@ -23,6 +23,12 @@
   border-radius: 5px;
 }
 
+%tick-mark {
+  align-self: center;
+  justify-self: center;
+  font-size: 14px;
+}
+
 .collection {
   border-radius: 5px;
   cursor: pointer;
@@ -75,11 +81,17 @@
     margin: 0;
   }
 
-  .in-this-collection {
-    color: rgb(42, 190, 42);
+  .tick-container {
     align-self: center;
-    justify-self: center;
-    font-size: 20px;
+    .nitc {
+      color: #626262;
+      @extend %tick-mark;
+    }
+  
+    .itc {
+      color: rgb(42, 190, 42);
+      @extend %tick-mark;
+    }
   }
 }
 
