--- a/src/assets/styles/no-auth-layout.scss
+++ b/src/assets/styles/no-auth-layout.scss
@@ -21,7 +21,7 @@
 		}
 
 		.form {
-			max-width: 350px;
+			max-width: 100%;
 			margin-bottom: 50px;
 			.form-title {
 				font-family: 'Montserrat', sans-serif;
