minor ui ux fixes

--- a/src/app/components/dialogs/dr/dr.component.html
+++ b/src/app/components/dialogs/dr/dr.component.html
@@ -4,5 +4,5 @@
 
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Cancel</button>
-  <button mat-raised-button color="warn" (click)="onYesClick()" cdkFocusInitial>Ok</button>
+  <button mat-raised-button [disabled]="isLoading" color="warn" (click)="onYesClick()" cdkFocusInitial>Ok</button>
 </div>
