--- a/src/assets/styles/general.scss
+++ b/src/assets/styles/general.scss
@@ -22,6 +22,7 @@
 }
 
 a {
+
   &:active,
   &:focus {
     outline: none;
@@ -56,6 +57,7 @@ app-root {
 .section-container {
   overflow-x: hidden;
   margin-bottom: 25px;
+
   mat-divider {
     margin-bottom: 15px;
   }
@@ -153,12 +155,38 @@ app-root {
       }
 
       .followers-following {
-        border-radius: 5px;
-        display: inline-block;
+        display: inline-grid;
+        grid-template-columns: 25px 1fr 1fr;
+        grid-gap: 5px;
+        padding: 5px 10px;
+        border: var(--profile-followers-following-border);
+        border-radius: 25px;
         cursor: pointer;
-        padding: 10px;
-        font-size: 14px;
-        width: auto;
+        transition: background-color 0.3s ease-in-out;
+
+        &:hover {
+          background-color: var(--profile-followers-following-bg-hover);
+        }
+
+        fa-icon, span {
+          font-size: 14px;
+        }
+
+        fa-icon {
+          color: var(--profile-followers-following-icon-color);
+        }
+
+        div:nth-of-type(1) {
+          place-self: center;
+        }
+
+        div:nth-of-type(2) {
+          align-self: center;
+        }
+
+        div:nth-of-type(3) {
+          align-self: center;
+        }
       }
     }
 
@@ -169,7 +197,7 @@ app-root {
 
     .complete-profile-label {
       font-size: 12px;
-      color: rgba(0, 0, 0, 0.3);
+      color: inherit;
     }
   }
 
@@ -182,6 +210,7 @@ app-root {
   border-bottom: var(--popover-header-border-bottom);
   padding: 15px;
   font-size: 14px;
+
   span {
     color: #a2a2a2;
   }
@@ -205,9 +234,11 @@ app-root {
   &:hover {
     background-color: rgba(0, 0, 0, 0.1);
   }
+
   .top {
     font-size: 14px;
     margin-bottom: 5px;
+
     fa-icon {
       color: var(--popover-item-top-icon-color);
       margin-right: 10px;
@@ -229,6 +260,7 @@ app-root {
 .dialog-title {
   font-size: 16px;
   max-width: 400px;
+
   strong {
     font-family: "Montserrat", sans-serif;
   }
@@ -238,8 +270,10 @@ app-root {
   position: relative;
   width: 100%;
   margin-bottom: 20px;
+
   .label-container {
     margin-bottom: 5px;
+
     label {
       color: var(--custom-input-label-container);
       font-size: 12px;
@@ -253,13 +287,16 @@ app-root {
     border-radius: 10px;
     padding: 15px 20px;
     transition: border 0.2s ease-in-out;
-    input, textarea {
+
+    input,
+    textarea {
       align-self: center;
       background-color: transparent;
       border: none;
       font-size: 15px;
       width: 100%;
       color: var(--custom-input-color);
+
       &:focus {
         outline: 0;
         border: 0;
