--- a/src/app/components/resource-no-image/resource-no-image.component.html
+++ b/src/app/components/resource-no-image/resource-no-image.component.html
@@ -31,6 +31,7 @@
           [colorPicker]="form.get('textColor').value"
           [value]="form.get('textColor').value"
           (colorPickerChange)="form.get('textColor').setValue($event)"
+          cpPosition="bottom"
           [style.background]="form.get('textColor').value"
         />
       </div>
