minor fix for custom input placeholder

--- a/src/app/components/dialogs/atc/mini-collection/mini-collection.component.scss
+++ b/src/app/components/dialogs/atc/mini-collection/mini-collection.component.scss
@@ -84,7 +84,7 @@
   .tick-container {
     align-self: center;
     .nitc {
-      color: #626262;
+      color: var(--atc-nitc);
       @extend %tick-mark;
     }
   
