updated manage page ui

--- a/src/app/pages/manage/manage.component.html
+++ b/src/app/pages/manage/manage.component.html
@@ -6,7 +6,7 @@
       [formGroup]="form"
     >
       <!-- Search -->
-      <div
+      <!-- <div
         class="control search"
         [ngClass]="{
           'search-in-focus': isSearchFocused
@@ -22,7 +22,7 @@
           (focus)="searchFocusIn()"
           (focusout)="searchFocusOut()"
         />
-      </div>
+      </div> -->
 
       <!-- Filter -->
       <!-- <div class="control filter" #origin *ngIf="form.get('posts').value">
