--- a/src/app/pages/manage/manage.component.scss
+++ b/src/app/pages/manage/manage.component.scss
@@ -6,18 +6,20 @@ $temp: var(--manage-header-control-background-color);
 
   .header {
     display: grid;
-    grid-template-columns: auto;
+    grid-template-columns: 75px 1fr;
     grid-gap: 15px;
     align-items: center;
-    margin-bottom: 30px;
-    padding: 15px 15px 0 15px;
+    margin-bottom: 15px;
+    padding: 15px 0px 0 15px;
     overflow-x: hidden;
+
+    h3 {
+      font-size: 16px;
+    }
 
     .controls {
       display: grid;
       grid-gap: 15px;
-      padding-left: 15px;
-      padding-right: 15px;
 
       .control {
         background-color: var(--manage-header-control-background-color);
@@ -74,9 +76,9 @@ $temp: var(--manage-header-control-background-color);
         background-color: var(--manage-header-control-background-color);
         border: 2px solid transparent;
         border-radius: 25px;
-        padding: 5px 20px;
+        padding: 0px 20px 5px 20px;
         transition: border 0.2s ease-in-out;
-        justify-self: center;
+        justify-self: right;
 
         div:first-child {
           margin-right: 10px;
@@ -89,13 +91,13 @@ $temp: var(--manage-header-control-background-color);
 
           fa-icon {
             color: var(--manage-header-control-icon-color);
-            font-size: 16px;
+            font-size: 14px;
             transition: color 0.2s ease-in-out;
           }
 
           span {
             color: #6d6b71;
-            font-size: 14px;
+            font-size: 12px;
             margin-left: 8px;
             transition: color 0.2s ease-in-out;
           }
@@ -138,18 +140,34 @@ $temp: var(--manage-header-control-background-color);
       grid-template-columns: 85px 1fr;
       padding: 50px 30px 0 30px;
 
+      h3 {
+        font-size: inherit;
+      }
+
       .controls {
-        grid-template-columns: repeat(4, auto);
         justify-self: end;
 
         .control {
           width: 100px;
         }
+
+        .control-group {
+          padding: 3px 20px 5px 20px;
+          .group {
+            fa-icon {
+              font-size: 16px;
+            }
+  
+            span {
+              font-size: 14px;
+            }
+          }
+        }
       }
     }
 
     .columns {
-      grid-template-columns: 350px 2fr;
+      grid-template-columns: auto 1fr;
       grid-gap: 15px;
       padding: 0 30px;
     }
