--- a/src/app/pages/search-page/search-page.component.scss
+++ b/src/app/pages/search-page/search-page.component.scss
@@ -6,49 +6,33 @@
   }
   .search-container {
     background-color: var(--search-page-tool-background-color);
-    padding: 0 15px;
+    padding: 10px 10px 15px 15px;
     border-radius: 5px;
 
     form {
-      display: grid;
-      grid-template-columns: auto;
-    }
-    
-    .custom-input:nth-of-type(1) {
-      padding-top: 15px;
-    }
-
-    .dropdowns {
-      display: grid;
-      font-size: 12px;
-      grid-template-areas: "order-by"
-      "checkboxes";
-      grid-column-gap: 15px;
-      padding-bottom: 15px;
-      align-content: center;
-
-      .order-by-container {
-        grid-area: order-by;
-      }
+      display: inherit;
 
       .checkboxes-container {
-        grid-area: checkboxes;
         align-self: center;
         p {
           margin-bottom: 5px;
           color: var(--custom-input-label-container);
         }
         .checkboxes {
-          display: grid;
-          grid-template-columns: 1fr 1fr 1fr;
+          display: inline;
+          font-size: 12px;
           mat-checkbox:not(:last-child) {
             margin-right: 15px;
           }
-        }
-      }
 
-      mat-form-field {
-        font-size: 12px;
+          mat-checkbox {
+            label {
+              span {
+                font-size: 12px;
+              }
+            }
+          }
+        }
       }
     }
   }
@@ -76,19 +60,17 @@
 
   .section-container {
     .search-container {
+      padding: 10px 10px 0px 15px;
       form {
         display: grid;
-        grid-template-columns: 1fr 2fr;
+        grid-template-columns: auto auto auto;
         grid-gap: 15px;
-      }
-      .dropdowns {
-        grid-template-areas: "order-by checkboxes";
-        padding-bottom: 10px;
 
         .checkboxes-container {
-          margin-top: -15px;
+          margin-top: -10px;
           .checkboxes {
             display: inline-block;
+            font-size: inherit;
           }
         }
       }
