--- a/src/app/pages/page-not-found/page-not-found.component.html
+++ b/src/app/pages/page-not-found/page-not-found.component.html
@@ -2,6 +2,6 @@
   <div class="page-not-found">
     <h1>404</h1>
     <p>Page not found</p>
-    <button mat-raised-button color="accent" [routerLink]="['/']" matTooltip="To the place I belong">Take me Home</button>  
+    <app-custom-button buttonLabel="Take me Home" [routerLink]="['/']" matTooltip="To the place I belong"></app-custom-button>
   </div>
 </div>
