fixed collections that have no resource in them messing up atc component

--- a/src/app/components/dialogs/atc/mini-collection/mini-collection.component.html
+++ b/src/app/components/dialogs/atc/mini-collection/mini-collection.component.html
@@ -1,32 +1,25 @@
-<div
-  (click)="toggleResourceFromCollection()"
-  class="collection"
-  matRipple
-  [ngClass]="{
+<div (click)="toggleResourceFromCollection()" class="collection" matRipple [ngClass]="{
     'two-columns': !data.inThisCollection,
     'three-columns': data.inThisCollection
-  }"
->
-  <div
-    *ngIf="!data.resource1.noImage"
-    class="image"
-    [ngStyle]="{
+  }">
+  <div *ngIf="!showPlaceholder" class="image" [ngStyle]="{
       'background-image': 'url(' + image + ')'
-    }"
-  >
+    }">
     <div class="placeholder" *ngIf="showPlaceholder">
       <span>{{ placeholderText }}</span>
     </div>
   </div>
 
-  <div
-    *ngIf="data.resource1.noImage"
-    class="no-image"
-    [ngStyle]="{
+  <div *ngIf="showPlaceholder && hasResource" class="no-image" [ngStyle]="{
       'background-color': data.resource1.backgroundColor,
       'color': data.resource1.textColor
-    }"
-  >
+    }">
+    <div class="placeholder" *ngIf="showPlaceholder">
+      <span>{{ placeholderText }}</span>
+    </div>
+  </div>
+
+  <div *ngIf="showPlaceholder && !hasResource" class="no-image">
     <div class="placeholder" *ngIf="showPlaceholder">
       <span>{{ placeholderText }}</span>
     </div>
@@ -40,7 +33,7 @@
     <div class="itc" *ngIf="inThisCollection">
       <fa-icon [icon]="faCheckCircle"></fa-icon>
     </div>
-  
+
     <div class="nitc" *ngIf="!inThisCollection">
       <fa-icon [icon]="faCheckCircle"></fa-icon>
     </div>
