--- a/src/app/components/dialogs/atc/mini-collection/mini-collection.component.scss
+++ b/src/app/components/dialogs/atc/mini-collection/mini-collection.component.scss
@@ -67,6 +67,7 @@
       position: absolute;
       @extend %noImageBox;
       display: grid;
+      background-color: #dee8ff;
 
       span {
         align-self: center;
