improved like unlike ux

--- a/src/app/components/collection/collection-options/collection-options.component.html
+++ b/src/app/components/collection/collection-options/collection-options.component.html
@@ -35,7 +35,7 @@
   </div>
 </div>
 
-<div class="popover-item" matRipple>
+<div class="popover-item" matRipple (click)="goToCollection()">
   <div class="top">
     <fa-icon [icon]="faShare"></fa-icon>
     <span>Go to collection</span>
@@ -45,14 +45,3 @@
     <small>View posts in the collection</small>
   </div>
 </div>
-
-<!-- <div class="popover-item" matRipple>
-  <div class="top">
-    <fa-icon [icon]="faShareAlt"></fa-icon>
-    <span>Share</span>
-  </div>
-
-  <div class="bottom">
-    <small>Share collection on social media</small>
-  </div>
-</div> -->
