--- a/src/app/components/post/post.component.scss
+++ b/src/app/components/post/post.component.scss
@@ -293,6 +293,7 @@ textarea {
 	background-color: var(--post-textarea-background-color);
 	color: var(--post-textarea-color);
 	cursor: text;
+	caret-color: var(--post-textarea-caret-color);
 }
 
 @keyframes buttonAppear {
