--- a/src/app/components/profile-summary/profile-summary.component.html
+++ b/src/app/components/profile-summary/profile-summary.component.html
@@ -29,6 +29,15 @@
           Unfollow
         </button>
       </div>
+
+      <div class="follow-unfollow-container" *ngIf="userData.isSelf">
+        <button
+          class="unfollow"
+          (click)="goToSettings()"
+        >
+          Settings
+        </button>
+      </div>
     </div>
   </div>
 
