--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -32,9 +32,9 @@
   </form>
 </div>
 
-<div class="alternative">
+<div class="alternative" routerLink="/signup">
   <span>Not a member yet? Sign up here</span>
-  <div class="go-to-signup" routerLink="/signup" matRipple>
+  <div class="go-to-signup" matRipple>
     <fa-icon [icon]="faArrowRight"></fa-icon>
   </div>
 </div>
