--- a/src/app/components/custom-button/custom-button.component.html
+++ b/src/app/components/custom-button/custom-button.component.html
@@ -1,15 +1,9 @@
-<button 
-mat-button 
-matRipple 
-class="custom-button" 
-[ngClass]="{
+<button mat-button matRipple class="custom-button" [ngClass]="{
   'not-disabled': isDisabled, 
   'delete-button': isDelete,
   'is-loading': isLoading,
   'hover': !isLoading
-}"
-[disabled]="isDisabled" 
-[ngStyle]="
+}" [disabled]="isDisabled" [ngStyle]="
 {
   'background-color': bgColor, 
   'padding': padding, 
@@ -19,5 +13,7 @@ class="custom-button"
   'box-shadow': boxShadow,
   'font-family': fontFamily
 }">
+  <mat-progress-spinner *ngIf="isLoading" color="accent" mode="indeterminate" value="25" diameter="15" style="margin-right: 5px;">
+  </mat-progress-spinner>
   {{ buttonLabel }}
 </button>
