--- a/src/app/components/profile-summary/profile-summary.component.scss
+++ b/src/app/components/profile-summary/profile-summary.component.scss
@@ -117,7 +117,7 @@
         display: grid;
         border-radius: 50%;
         border: var(--profile-summary-remaining-followers-border);
-        background-color: aliceblue;
+        background-color: #ffeb4f;
         transition: border 0.2s ease-in-out;
         color: var(--profile-summary-remaining-followers-color);
 
@@ -129,6 +129,7 @@
           place-self: center;
           font-family: "Montserrat", sans-serif;
           font-size: 0.6rem;
+          font-weight: 700;
         }
       }
     }
