--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -106,9 +106,9 @@
   </form>
 </div>
 
-<div class="alternative">
+<div class="alternative" routerLink="/login">
   <span>Have an account? Sign in here</span>
-  <div class="go-to-signup" routerLink="/login" matRipple>
+  <div class="go-to-signup" matRipple>
     <fa-icon [icon]="faArrowRight"></fa-icon>
   </div>
 </div>
