--- a/src/app/pages/page-not-found/page-not-found.component.scss
+++ b/src/app/pages/page-not-found/page-not-found.component.scss
@@ -1,19 +1,16 @@
 .container {
+	display: grid;
     width: 100%;
     height: 100%;
 	background-size: 100%;
 	background-position: bottom;
-    background-repeat: no-repeat;
-    position: relative;
+	background-repeat: no-repeat;
+	place-items: center;
 	.page-not-found {
 		background-color: white;
 		border-radius: 5px;
         width: 250px;
         height: 250px;
-		position: absolute;
-		left: 50%;
-		top: 50%;
-		transform: translate(-50%, -50%);
 		padding: 25px;
 		text-align: center;
 
@@ -21,10 +18,6 @@
             font-size: 5rem;
             margin-top: 25px;
             margin-bottom: 0;
-		}
-
-		button {
-			text-transform: uppercase;
 		}
 	}
 }
